--- a/OpenEdXMobile/res/values-fr/iap_strings.xml
+++ b/OpenEdXMobile/res/values-fr/iap_strings.xml
@@ -6,4 +6,56 @@
     <string name="title_purchase">Restaurer les achats</string>
     <!--  Description of Purchases Field  -->
     <string name="description_purchase">Connectez-vous au Play Store pour restaurer l\'accès aux cours que vous avez payés</string>
+
+    <!-- Message for successful course purchase -->
+    <string name="purchase_success_message">Merci pour votre achat. Profitez d’un accès complet à votre cours!</string>
+
+    <!-- Title of Course Upgrade Error Alert -->
+    <string name="title_upgrade_error">Une erreur s\'est produite</string>
+    <!-- Message for course upgrade error -->
+    <string name="general_error_message">Il semble que quelque chose s’est mal passé lors de la mise à niveau de votre cours. Si cette erreur persiste, veuillez contacter le support.</string>
+    <!-- Email Subject for Course Upgrade Error -->
+    <string name="email_subject_upgrade_error">Erreur de mise à niveau du cours dans l’application</string>
+    <!-- Get Help button label -->
+    <string name="label_get_help">Obtenir de l\'aide</string>
+    <!-- Refresh To Retry button label -->
+    <string name="label_refresh_to_retry">Actualiser pour réessayer</string>
+
+    <!--  Error Messages  -->
+    <!--  Course didn't found against the course sku in the course upgrade API -->
+    <string name="error_course_not_found">Le cours que vous cherchez à mettre à niveau n’a pas pu être trouvé. Veuillez réessayer votre mise à niveau. Si cette erreur persiste, contactez le support.</string>
+    <!-- Authentication error in course upgrade API's basket, checkout, execute  -->
+    <string name="error_user_not_authenticated">Votre compte n’a pas pu être authentifié. Essayez de vous déconnecter et de vous reconnecter à l’application. Si cette erreur persiste, veuillez contacter le support.</string>
+    <!--  The course is already upgraded  -->
+    <string name="error_course_already_paid">Le cours que vous cherchez à mettre à niveau a déjà été payé. Pour mettre à jour, nous devons actualiser rapidement votre application.</string>
+    <!--  Course sku or the payment processor didn't found  -->
+    <string name="error_payment_not_processed">Votre paiement n’a pas pu être traité pour le moment. Veuillez réessayer. Pour obtenir de l’aide supplémentaire, contactez le support.</string>
+    <!--  The native payment is complete but an error occurred while marking the course verified  -->
+    <string name="error_course_not_fullfilled">Quelque chose s’est produit lorsque nous avons essayé de mettre à jour votre expérience de cours. Si cette erreur persiste, contactez le support pour obtenir de l’aide.</string>
+    <!--  The price wasn't fetched from the payment sdk  -->
+    <string name="error_price_not_fetched">Votre demande n’a pas pu être traitée pour le moment. Si cette erreur persiste, veuillez contacter le support</string>
+
+    <!-- Full Screen Loader -->
+    <string name="fullscreen_loader_unlocking">Déverrouillage</string>
+    <string name="fullscreen_loader_full_access">Accès complet</string>
+    <string name="fullscreen_loader_to_your_course">Dans votre cours</string>
+
+    <!-- Label Course Modal Unlock Graded Assignments -->
+    <string name="course_modal_unlock_graded_assignment">Déverrouiller les devoirs notés</string>
+
+    <!-- Silent Course Upgrade Success Alert -->
+    <!-- Silent Course Upgrade Success Alert Title -->
+    <string name="silent_course_upgrade_success_title">Nouveaux contenus disponibles</string>
+    <!-- Silent Course Upgrade Success Alert Message -->
+    <string name="silent_course_upgrade_success_message">Une mise à jour est disponible pour débloquer un cours acheté. Pour mettre à jour, nous devons actualiser rapidement votre application. Si vous choisissez de ne pas mettre à jour maintenant, nous réessayerons plus tard.</string>
+    <!-- Label Refresh Now -->
+    <string name="label_refresh_now">Rafraîchir maintenant</string>
+    <!-- Label Continue Without Update -->
+    <string name="label_continue_without_update">Continuer sans mise à jour</string>
+    <!-- Title of the dialog to while verifying the incomplete purchases -->
+    <string name="title_checking_purchases">Contrôle des achats\.\.\.</string>
+    <!-- Title of the Purchases successfully restored dialog -->
+    <string name="title_purchases_restored">Les achats ont été rétablis avec succès</string>
+    <!-- Message for the Purchases successfully restored dialog -->
+    <string name="message_purchases_restored">Tous les achats sont à jour. Si vous ne voyez pas vos achats restaurés, merci d\'essayer de redémarrer votre application pour actualiser l’expérience.</string>
 </resources>
