--- a/OpenEdXMobile/res/values-iw/video_strings.xml
+++ b/OpenEdXMobile/res/values-iw/video_strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Button text to show user Video Settings screen -->
-    <string name="label_video_settings">הגדרות וידיאו</string>
+    <string name="label_video_settings">הגדרות וידאו</string>
     <!-- Title of Video Quality Dialog -->
     <string name="video_download_quality_title">איכות הורדת וידאו</string>
     <!-- Auto Video Quality option -->
