--- a/OpenEdXMobile/res/values-ja/profile_strings.xml
+++ b/OpenEdXMobile/res/values-ja/profile_strings.xml
@@ -35,7 +35,14 @@
     <string name="description_delete_account">次の画面の指示に従って、アカウントおよびすべての関連するデータを削除します。</string>
     <!--  Label of App Version  -->
     <string name="label_app_version">バージョン</string>
-
+    <!--  Heading of Privacy Fields  -->
+    <string name="label_privacy">プライバシー</string>
+    <!--  Label of Privacy Policy Button  -->
+    <string name="label_privacy_policy">プライバシーポリシー</string>
+    <!--  Label of Cookie Policy Button  -->
+    <string name="label_cookie_policy">クッキーポリシー</string>
+    <!--  Label of Data Consent Button  -->
+    <string name="label_do_not_sell_my_personal_data">私の個人情報を販売しないでください</string>
     <!-- Logout button label -->
     <string name="logout">ログアウト</string>
     <!-- Profile screen version -->
