--- a/OpenEdXMobile/res/values-pt-rBR/iap_strings.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/iap_strings.xml
@@ -6,4 +6,56 @@
     <string name="title_purchase">Restaurar compras</string>
     <!--  Description of Purchases Field  -->
     <string name="description_purchase">Entre na Play Store para restaurar o acesso aos cursos que você já pagou para atualizar</string>
+
+    <!-- Message for successful course purchase -->
+    <string name="purchase_success_message">Agradecemos sua compra conosco. Aproveite seu acesso completo ao nosso curso </string>
+
+    <!-- Title of Course Upgrade Error Alert -->
+    <string name="title_upgrade_error">Ocorreu um erro</string>
+    <!-- Message for course upgrade error -->
+    <string name="general_error_message">Parece que algo deu errado ao atualizar seu curso. Se o erro persistir, entre em contato com o Suporte.</string>
+    <!-- Email Subject for Course Upgrade Error -->
+    <string name="email_subject_upgrade_error">Erro ao atualizar o curso no aplicativo</string>
+    <!-- Get Help button label -->
+    <string name="label_get_help">Obter ajuda</string>
+    <!-- Refresh To Retry button label -->
+    <string name="label_refresh_to_retry">Atualize para tentar novamente</string>
+
+    <!--  Error Messages  -->
+    <!--  Course didn't found against the course sku in the course upgrade API -->
+    <string name="error_course_not_found">O curso que você deseja atualizar não foi encontrado. Por favor, tente a atualização novamente. Se o erro persistir, entre em contato com o Suporte.</string>
+    <!-- Authentication error in course upgrade API's basket, checkout, execute  -->
+    <string name="error_user_not_authenticated">Não foi possível autenticar sua conta. Tente sair e entrar novamente no aplicativo. Se o erro persistir, entre em contato com o Suporte.</string>
+    <!--  The course is already upgraded  -->
+    <string name="error_course_already_paid">O curso que você deseja atualizar já foi pago. Para atualizar, precisamos atualizar rapidamente seu aplicativo.</string>
+    <!--  Course sku or the payment processor didn't found  -->
+    <string name="error_payment_not_processed">Não foi possível processar seu pagamento neste momento. Por favor, tente novamente. Para obter ajuda adicional, entre em contato com o Suporte.</string>
+    <!--  The native payment is complete but an error occurred while marking the course verified  -->
+    <string name="error_course_not_fullfilled">Algo aconteceu quando tentamos atualizar sua experiência no curso. Se o erro persistir, entre em contato com o Suporte para obter ajuda.</string>
+    <!--  The price wasn't fetched from the payment sdk  -->
+    <string name="error_price_not_fetched">Sua solicitação não pode ser concluída neste momento. Se o erro persistir, entre em contato com o Suporte.</string>
+
+    <!-- Full Screen Loader -->
+    <string name="fullscreen_loader_unlocking">Desbloqueando</string>
+    <string name="fullscreen_loader_full_access">acesso total</string>
+    <string name="fullscreen_loader_to_your_course">para o seu curso</string>
+
+    <!-- Label Course Modal Unlock Graded Assignments -->
+    <string name="course_modal_unlock_graded_assignment">Desbloqueie tarefas avaliadas</string>
+
+    <!-- Silent Course Upgrade Success Alert -->
+    <!-- Silent Course Upgrade Success Alert Title -->
+    <string name="silent_course_upgrade_success_title">Nova experiência disponível</string>
+    <!-- Silent Course Upgrade Success Alert Message -->
+    <string name="silent_course_upgrade_success_message">Uma atualização está disponível para desbloquear um curso comprado. Precisamos atualizar rapidamente seu aplicativo. Se você optar por não atualizar agora, tentaremos novamente mais tarde.</string>
+    <!-- Label Refresh Now -->
+    <string name="label_refresh_now">Atualize agora</string>
+    <!-- Label Continue Without Update -->
+    <string name="label_continue_without_update">Continuar sem atualização</string>
+    <!-- Title of the dialog to while verifying the incomplete purchases -->
+    <string name="title_checking_purchases">Verificação de compras\.\.\.</string>
+    <!-- Title of the Purchases successfully restored dialog -->
+    <string name="title_purchases_restored">As compras foram restauradas com sucesso</string>
+    <!-- Message for the Purchases successfully restored dialog -->
+    <string name="message_purchases_restored">Todas as compras estão em dia. Se você não estiver vendo suas compras restauradas, tente reiniciar seu aplicativo para atualizar a experiência.</string>
 </resources>
